--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-tensorflow==1.2.1
+# tqdm==4.26.0
 # numpy==1.14.5
+tensorflow==1.2.1
 opencv-python==3.4.3.18
 Pillow==5.2.0
-tqdm==4.26.0
 PyYAML==3.13
 h5py==2.8.0
 numpy
+tqdm
